samples/_failures_safe/1761198484_275bcb_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_5da04d60.c: In function ‘main’:
./samples/SAFE/__tmp_5da04d60.c:178:5: error: expected declaration or statement at end of input
  178 |     }
      |     ^
